# tech-europe-hackathon

./: .gitignore  README.md  app.py  pyproject.toml
tech_europe_hackathon/: __init__.py
tech_europe_hackathon/agents/: __init__.py  modification_agent.py  preparation_agent.py  url_scraping_agent.py
tech_europe_hackathon/utils/: __init__.py  audio.py  config.py  document.py
